Fix Safari-side SafeBrowsing telemetry https://bugs.webkit.org/show_bug.cgi?id=234439

Patch by Eliot Hsu <eliot_hsu@apple.com> on 2021-12-21
Reviewed by Alex Christensen.

Fix old (and privacy-preserving) telemetry for Safe Browsing,
which were previously reported from the Safari side.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::showSafeBrowsingWarning):


Canonical link: https://commits.webkit.org/245479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287333 268f45cc-cd09-0410-ab3c-d52691b4dbfc